# openai

./: CMakeLists.txt  README.md  build.bat  linuxBuild.sh
example/: CMakeLists.txt  main.cpp
gpt/: CMakeLists.txt  exception.h  gpt.cpp  gpt.h
